# DJA-SEpp

./: .gitignore  00.1_RGBimage.ipynb  00.2_Cutout.ipynb  00.3_DownloadImage.ipynb  00.4_Tiles.ipynb  01_ExploringDJA.ipynb  02.1_BandChoice.ipynb  02_SExtractor.py  03.1_SingleBand-PSF.ipynb  03.2_PSF-Profile.ipynb  03_PSFEx.ipynb  03_PSFEx.py  04.1_AssociationCatalog.ipynb  04.2_SE++Assoc.ipynb  04_SE++.ipynb  04_SE++.py  05_Analysis.ipynb  EC2_benchmark.ipynb  LICENSE  README.md  monitor_se++.sh  pyproject.toml
benchmark/: EC2_benchmark.ipynb  disable_hyperthreading.sh  monitor_se++.sh
config/: PSFEx-Cat-JWST-SW.param  PSFEx-Cat-JWST.sex  gauss_1.5_3x3.conv  psfex_default.conf  sepp-config.py
notebooks/: 00.1_RGBimage.ipynb  00.2_Cutout.ipynb  00.3_DownloadImage.ipynb  00.4_Tiles.ipynb  00.5_LimitingMag.ipynb  02.1_BandChoice.ipynb  02_SExtractor.ipynb  03.1_SingleBand-PSF.ipynb  03.2_PSF-Profile.ipynb  03_PSFEx.ipynb  04.1_AssociationCatalog.ipynb  04.2_SE++Assoc.ipynb  04_SE++.ipynb  05_Analysis.ipynb  06.1_B+D-Sersic.ipynb  06.2_DJA-SE++CatMerge.ipynb  06.3_DJA-SE++Analysis.ipynb  06.4_DJA-SE++AnalysisComplete.ipynb  06_Validation.ipynb  07_MergeTiles.ipynb  08_CPU_Usage.ipynb
psfex/CEERS/: ceers-full-grizli-v7.2-f115w-clear_drc_cat_star_psf.psf  (+8 more)
scripts/: autoclean.sh  autorun_full.sh  autorun_setup.sh  autorun_tile.sh  compress_images.ipynb  cutout.py  decompress.py  download_full.py  download_psf.py  download_sepp-tile.py  download_tile.py  psf.py  run_tile.sh  sepp.py  setup.sh  setup_image_psf.sh  test.sh  tile.py
src/dja_sepp/: __init__.py  psfex.py  (+5 more)
(+28 files in other folders)
